Fix: Font size too small on big screens

--- a/css/e20r-activity.css
+++ b/css/e20r-activity.css
@@ -59,7 +59,7 @@ div.e20r-exercise-description {
     width: 100%;
     margin: 0 auto;
     text-align: left;
-    font-size: 1vw;
+    font-size: 0.9rem;
     background-color: #fff;
     border: 2px solid #c0c0c0;
     min-height: 7.5ex;
